probamos de una manera distinta

--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,22 @@
 {
     "name": "sergiorutalita/stormailer-bundle",
-    "type": "symfony-bundle",
-    "description": "A custom mailer transport bundle for Symfony",
-    "keywords": ["mailer", "transport", "symfony", "bundle"],
+    "description": "Descripción de mi paquete.",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Sergio Rutalita",
-            "email": "srutalita@test.com"
+            "name": "Tu Nombre",
+            "email": "tu@email.com"
         }
     ],
-    "require": {
-        "php": ">=8.2",
-        "symfony/framework-bundle": "^6.4",
-        "symfony/mailer": "^6.4"
-    },
     "autoload": {
         "psr-4": {
-            "sergiorutalita\\stormailer-bundle\\": "src"
+            "MyPackage\\": "src/"
+        }
+    },
+    "extra": {
+        "symfony": {
+            "config": "config/packages/mypackage.yaml"
         }
     }
 }
