añadimos paquetes de otra manera

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,11 @@
     },
     "extra": {
         "symfony": {
-            "config": "config/packages/mypackage.yaml"
+            "config": {
+                "resources": [
+                    "config/packages/*"
+                ]
+            }
         }
     }
 }
