--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "symfony": {
             "config": {
                 "resources": [
-                    "config/packages/*"
+                    "config/packages/mypackage.yaml"
                 ]
             }
         }
